# sql_semantics

./: .gitignore  README.md  README.txt  SQL AST Traversal.ipynb  pyproject.toml  pytest.ini  requirements.txt  run.py
blake_test/: query_batch_001.sql
debug/: debug_parser.py
sql_parser/: debug.py  debug_extractor.py  debug_parser.py  pytest.ini
sql_parser/scripts/: example_queries.py  run_parser.py  testing.sql
sql_parser/sql_parser/: booleans.py  context.py  extractor.py  node.py  nodes.py  parser.py  parser_bk.py  parser_old.py  registry.py  scratch.py  utils.py
sql_parser/sql_parser/logic/: __init__.py  base.py  column.py  connection.py  cte.py  (+8 more)
sql_parser/tests/: _test_integration.py  _test_sql_parser_old.py  test_base.py  test_column.py  test_connection.py  test_context.py  test_cte.py  test_feature.py  test_identifier.py  test_integration.py  test_nodes.py  test_parser.py  test_scratch.py  test_sql_parser.py  test_sql_parser_old.py  test_subquery.py  test_table.py  test_utils.py  test_where.py
sqlflow/: nodes.py  parser.py  registry.py  utils.py
sqlflow/cli/: generate_queries.py
sqlflow/handlers/: base.py  column.py  connection.py  cte.py  feature.py  identifier.py  subquery.py  table.py  where.py
sqlsim/: cte.sql  ddl.sql  dml.sql  etl.py  main.py  node.py  sample.sql  structure.py
tests/: test_base.py  test_column.py  test_connection.py  test_context.py  test_cte.py  test_feature.py  test_identifier.py  test_integration.py  test_nodes.py  test_parser.py  test_subquery.py  test_table.py  test_utils.py  test_where.py
tests/input/: testing.sql
(+55 files in other folders)
